# dbt-ie

./: .user.yml  AGENTS.md  CLAUDE.md  add_sessions.py  pyproject.toml
analyses/: sanity_checks.sql
class_material/: 11_governance_contracts_versions.md  16_practice_macros_python_testing.md  16_practice_macros_python_testing_doc.html  17_materializations_incremental_snapshots.md  18_practice_incremental_snapshots.md
docs/brainstorms/: 2026-05-25-dbt-macros-session.md
docs/plans/: 2026-05-12-001-feat-intermediate-models-exercise-plan.md
documentation/: mart_models_business_questions_brief.md
img/diagrams/: incremental_dag.mmd  incremental_flow.mmd  materializations_matrix.mmd  scd2_timeline.mmd
macros/: classify_revenue.sql  date_trunc_to_period.sql  datediff_days.sql  generate_status_flags.sql  pivot_count.sql  test_is_positive.sql
models/marts/: _marts_models.yml  _new_models.yml  customers_enriched_python.py  dim_customers.sql  dim_customers.yml  dim_products.sql  mart_channel_performance.py  mart_customer_rfm.py  mart_customer_rfm.yml  mart_daily_sessions.sql  mart_monthly_revenue.yml  mart_orders.sql  mart_orders.yml  mart_payment_method_breakdown.yml  mart_product_performance.sql  mart_product_review_summary.yml  mart_repeat_customers.yml  mart_revenue_by_segment.sql  mart_revenue_tiers.sql  mart_shipping_performance.yml  schema.yml
snapshots/: customer_snapshot.sql
tests/: assert_channel_conversion_rate_is_valid.sql  assert_completed_orders_are_paid.sql  assert_no_revenue_variance.sql  assert_row_count_matches_stg_orders.sql
(+30 files in other folders)
