[project]
name = "dbt-ie"
version = "0.1.0"
description = "Analytics Engineering with dbt"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dbt-core==1.8.0",
    "dbt-duckdb>=1.8.0",
    "polars>=0.20.0",
    "duckdb==0.10.2",
    "ipykernel",
    "numpy",
    "pyarrow",
    "sqlfluff",
    "sqlfluff-templater-dbt",
    "pandas>=2.3.3",
]

[tool.uv]
package = false
